--- a/moon-security-browser/pom.xml
+++ b/moon-security-browser/pom.xml
@@ -17,11 +17,11 @@
             <artifactId>moon-security-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session</artifactId>
-            <version>1.3.5.RELEASE</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.session</groupId>-->
+<!--            <artifactId>spring-session</artifactId>-->
+<!--            <version>1.3.5.RELEASE</version>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
